syntax = "proto3";

package ark.v1;

/* Types */

message Batch {
  uint64 total_batch_amount = 1;
  uint64 total_forfeit_amount = 2;
  int32 total_input_vtxos = 3;
  int32 total_output_vtxos = 4;
  int64 expires_at = 5;
  bool swept = 6;
}

message NewOutpoint {
  string txid = 1;
  uint32 vout = 2;
}

//message Output {
//  string address = 1; // onchain or off-chain
//  uint64 amount = 2; // Amount to send in satoshis.
//}

message NodeNew {
  string txid = 1;
  string tx = 2;
  string parent_txid = 3;
  int32 level = 4;
  int32 level_index = 5;
}

message NewVtxo {
  NewOutpoint outpoint = 1;
  int64 created_at = 2;
  int64 expires_at = 3;
  uint64 amount = 4;
  string script = 5;
  bool is_leaf = 6;
  bool is_swept = 7;
  bool is_spent = 8;
  string spent_by = 9;
}

//message Tapscripts {
//  repeated string scripts = 1;
//}

message Bip322Signature {
  string signature = 1;
  string message = 2;
}

//message MarketHour {
//  int64 next_start_time = 1;
//  int64 next_end_time = 2;
//  int64 period = 3;
//  int64 round_interval = 4;
//}

message TxHistoryRecord {
  oneof key {
    string boarding_txid = 1;
    string commitment_txid = 2;
    string sweep_txid = 3;
    string ark_txid = 4;
  }
  TxType type = 5;
  uint64 amount = 6;
  int64 created_at = 7;
  int64 confirmed_at = 8;
  bool is_settled = 9;
}

enum TxType {
  TX_TYPE_UNSPECIFIED = 0;
  TX_TYPE_RECEIVED = 1;
  TX_TYPE_SENT = 2;
  TX_TYPE_SWEEP = 3;
}

message PageRequest {
  int32 size = 1;
  int32 index = 2;
}

message PageResponse {
  int32 current = 1;
  int32 next = 2;
  int32 total = 3;
}


/* Events */

message BatchStartedEvent {
  string id = 1;
  repeated string intent_ids = 2;
  int64 batch_expiry = 3;
  string forfeit_address = 4;
}

message BatchVtxoTreeEvent {
  string id = 1;
  repeated string topic  = 2;
  NodeNew tree_tx = 3;
}

message BatchConnectorTreeEvent {
  string id = 1;
  repeated string topic  = 2;
  NodeNew connector_tx = 3;
}

message BatchFinalizationEvent {
  string id = 1;
  string commitment_tx = 2;
  string forfeit_address = 3;
}

message BatchFinalizedEvent {
  string id = 1;
  string commitment_txid = 2;
}

message BatchFailedEvent {
  string id = 1;
  string reason = 2;
}

message TreeSigningStartedEvent {
  string id = 1;
  string signer_pubkey = 2;
  repeated string cosigners_pubkeys = 3;
  string unsigned_commitment_tx = 4;
}

message TreeNoncesAggregatedEvent {
  string id = 1;
  string tree_nonces = 2;
}